# sqgi

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  LICENSE  README.md  mkdocs.yml  sqgi.pc.in
Squirrel3/: CMakeLists.txt
Squirrel3/sqstdlib/: sqstdmath.cpp
Squirrel3/squirrel/: sqapi.cpp  sqarray.h  sqbaselib.cpp  sqcompiler.cpp  sqcompiler.h  sqdebug.cpp  sqfuncproto.h  sqfuncstate.cpp  sqfuncstate.h  sqlexer.cpp  sqobject.cpp  sqstate.cpp  sqstate.h  sqstring.h  sqtable.cpp  sqtable.h  squserdata.h  squtils.h  sqvm.cpp  sqvm.h
Squirrel3/squirrel/jit/: sqjit.cpp  sqjit.h  sqjit_backend.h  sqjit_backend_aarch64.cpp  sqjit_backend_aarch64_compile_loop.inc  sqjit_backend_aarch64_compile_proto.inc  sqjit_backend_aarch64_emit.cpp  sqjit_backend_aarch64_emit.h  sqjit_backend_aarch64_helpers.inc  sqjit_backend_aarch64_private.h
demo/: README.md
demo/benchmarks/: README.md  gjs_bench.js  node_bench.js  python_bench.py  run.sh  sqgi_bench.nut
demo/gdkpixbuf/: format_convert.nut  from_http.nut  inspect.nut  loader_pipeline.nut  mosaic.nut  thumbnail.nut  transform.nut
demo/gio/: actions.nut  argp.nut  cancel.nut  file_read.nut  gz_inflate.nut  http_head.nut  ls.nut  resolver.nut  run.nut  stat.nut  stream_copy.nut  tasks_all.nut  tcp_client.nut  tcp_echo.nut  tls_get.nut  udp_broadcast.nut  udp_echo.nut  udp_multicast.nut  watch.nut
demo/glib/: bytes_checksum.nut  datetime.nut  idle_drain.nut  keyfile.nut  mainloop_timer.nut  paths_env.nut  variant.nut
demo/gstreamer/: audio_mix.nut  cairo_overlay.nut  compositor_pip.nut  http_stream.nut  info.nut  play.nut  record.nut  seek.nut  tags.nut  tee_split.nut  tones.nut  transcode.nut  video_filters.nut  webcam.nut
demo/gtk4/: bouncing_ball.nut  counter.nut  dialog.nut  hello_world.nut  image_viewer.nut  image_viewer.sqgipkg.json  scroll_controller.nut  scroll_diagnostics.nut  textbuffer_iters.nut  widgets.nut
demo/gtk4/assets/: README.md
demo/soup/: cancel.nut  headers.nut  http_get.nut  json_get.nut  json_post.nut  parallel.nut  server.nut  vget.nut
devdocs/internals/: jit-maintainability-todo.md  squirrel-bytecode-jit.md
docs/: index.md  requirements.txt
docs/api/: README.md
docs/gi_docs/: index.md
docs/gi_docs/reference/: Atk-1.0.md  Atspi-2.0.md  DBus-1.0.md  DBusGLib-1.0.md  GIRepository-2.0.md  GL-1.0.md  GLib-2.0.md  GLibUnix-2.0.md  GModule-2.0.md  GObject-2.0.md  Gdk-3.0.md  Gdk-4.0.md  GdkPixbuf-2.0.md  GdkPixdata-2.0.md  GdkWayland-4.0.md  GdkX11-3.0.md  GdkX11-4.0.md  Gee-0.8.md  Gio-2.0.md  GioUnix-2.0.md  Granite-7.0.md  Graphene-1.0.md  Gsk-4.0.md  Gst-1.0.md  GstBase-1.0.md  GstCheck-1.0.md  GstController-1.0.md  GstNet-1.0.md  Gtk-3.0.md  Gtk-4.0.md  GtkSource-5.md  HarfBuzz-0.0.md  IBus-1.0.md  JavaScriptCore-4.1.md  Json-1.0.md  (+20 more)
docs/internals/: squirrel-bytecode-jit.md
docs/language/: 00-chapter-map.md  01-overview-and-setup.md  02-values-types-and-operators.md  03-strings-arrays-and-tables.md  04-control-flow-functions-and-closures.md  05-classes-and-inheritance.md  06-error-handling-and-debugging.md  07-gi-imports-and-gobject-basics.md  08-properties-signals-and-subclassing.md  09-async-tasks-and-cancellation.md  10-main-loops-threading-and-event-model.md  11-end-to-end-patterns-and-recipes.md  12-gvariant-and-gvalue-interop.md
docs/packaging/: 01-package-one-script.md  02-manifest-and-scripts.md  03-resources-and-files.md  04-runtime-libraries-and-gi-data.md  05-native-gobject-modules.md  06-vala-and-native-entry.md  07-gtk-theming.md  08-targets-and-cross-builds.md  09-github-actions-release.md  README.md
docs/recipes/: gdkpixbuf.md  gio.md  glib.md  gstreamer.md  gtk4.md  soup.md
src/: main.c  sqgi_async.c  sqgi_async.h  sqgi_cairo.c  sqgi_cairo.h  sqgi_gerror.c  sqgi_gerror.h  sqgi_gi.c  sqgi_gi.h  sqgi_gi_object.c  sqgi_gi_object.h  sqgi_import.c  sqgi_import.h  sqgi_json.c  sqgi_json.h  sqgi_marshal.c  sqgi_marshal.h  sqgi_signal.c  sqgi_signal.h  sqgi_stack.h  sqgi_subclass.c  sqgi_subclass.h  sqgi_system.c  sqgi_system.h  sqgi_vm.c  sqgi_vm.h
test/: helper.nut  lsan.supp  run_tests.sh  run_tests_asan.sh  test_application.nut  test_application_command_line.nut  test_application_run_crash_regression.nut  test_async.nut  test_async_jsstyle.nut  test_async_reentrancy.nut  test_boxed_record_constructor.nut  test_bytes_converters.nut  test_cairo.nut  test_cli_gerror_report.sh  test_coverage_extras.nut  test_edge_cases.nut  test_emit.nut  test_gdkpixbuf_recipes.nut  test_gerror.nut  test_gi_multi_out.nut  test_gio_async.nut  test_gio_recipes.nut  test_glib.nut  test_glib_recipes.nut  test_gobject.nut  test_gstreamer_recipes.nut  test_gtk_textbuffer.nut  test_gvalue.nut  test_gvalue_types.nut  test_gvariant.nut  test_gvariant_classes.nut  test_import_nut.nut  test_jit_correctness.nut  test_jit_fastpath.nut  test_jit_math.nut  test_jit_perf_correctness.nut  test_json.nut  test_json_fuzz.nut  test_marshal_argcount.nut  test_marshal_fuzz.nut  (+18 more)
test/c/: test_gvalue_branches.c  test_signal_crossthread.c  test_signal_crossthread_sync.c  test_signal_vm_closing.c  test_squirrel_core_hardening.c
test/cpp/: test_sqjit_aarch64_backend_invalid.cpp  test_sqjit_aarch64_emit.cpp  test_sqvector.cpp
test/import_relative/: child.nut  sibling.nut
tools/: MANUAL.md  README.md  TODO.md  install-msys2-prereqs.sh  run_jit_benchmarks.sh  run_jit_median_benchmarks.py  run_jit_reject_summary.py  run_sqgi_demo_median_benchmarks.py  sqgipkg  sqgipkg.sh.in
tools/mingw/: mingw64.ini  toolchain_mingw64.cmake
tools/sqgipkg_lib/: appimage.nut  build.nut  core.nut  doctor.nut  linux_deps.nut  main.nut  manifest.nut  options.nut  scripts.nut  staging.nut  templates.nut
tools/sqgipkg_templates/: gtk4-gstreamer.sqgipkg.json  gtk4.sqgipkg.json  native-gobject.sqgipkg.json  native-vala.sqgipkg.json  simple.sqgipkg.json
tools/sqgipkg_tests/: run_cross_manifest_sweep.sh  run_tests.sh  test_modules.nut
tools/sqgipkg_tests/native_gi_project/native/: SqHello-1.0.windows.gir  build.sh  meson.build  sq-hello.c  sq-hello.h
tools/sqgipkg_tests/native_vala_project/native/: build.sh  meson.build  sq-vala.vala
(+36 files in other folders)
